--- a/html_export/Cargo.toml
+++ b/html_export/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Thomas Hodson thomas.hodson.pro@gmail.com"]
 description = "Basic struct & enums to html file conversion crate"
 repository = "https://github.com/Hodson-Thomas/Rust-Html-Export"
-homepage = "https://thomashodson.fr/"
+homepage = "https://github.com/Hodson-Thomas/Rust-Html-Export/wiki"
 keywords = ["html", "conversion", "generation", "rust"]
 categories = [""]
 
