--- a/html_export/Cargo.toml
+++ b/html_export/Cargo.toml
@@ -9,5 +9,6 @@ homepage = "https://github.com/Hodson-Thomas/Rust-Html-Export/wiki"
 keywords = ["html", "conversion", "generation", "rust"]
 categories = ["template-engine"]
 license = "MIT"
+readme = "README.md"
 
 [dependencies]
